--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "next": "15.3.4",
     "next-sanity": "^9.12.0",
